--- a/nginx-pod.yaml
+++ b/nginx-pod.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
-kind: Pods
+kind: Pod
 metadata:
   name: my-nginx-pod
   labels:
     app: nginx
 spec:
   containers:
-   - name: nginx
-     image: nginx:1.14.2
-     ports:
-     - ContainerPort: 80
+  - name: nginx
+    image: nginx:1.14.2
+    ports:
+    - containerPort: 80
