--- a/nginx-service.yaml
+++ b/nginx-service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
-type: Service
+kind: Service
 metadata:
-   name: my-nginx-service
-   labels:
-     app: nginx
+  name: my-nginx-service
+  labels:
+    app: nginx
 spec:
   type: LoadBalancer
   ports:
   - port: 80
+    targetPort: 80
   selector:
     app: nginx
+
