--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
-type: Deployment
+kind: Deployment
 metadata:
- name: my-nginx
- labels:
-   app: nginx
+  name: my-nginx
+  labels:
+    app: nginx
 spec:
   replicas: 3
   selector:
@@ -11,14 +11,13 @@ spec:
       app: nginx
   template:
     metadata:
-     name: my-nginx-pod
-     labels:
-      app: nginx
+      labels:
+        app: nginx
     spec:
       containers:
       - name: nginx
         image: nginx:1.14.2
         ports:
-        - ContainerPort: 80
+        - containerPort: 80
 
 
